fusion--dev/src/objects/Quote_Item_Level__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Amount__c</fullName>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CategorySection__c</fullName>
        <label>CategorySection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stock</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>CustomHardCoolers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Instructions__c</fullName>
        <label>Delivery Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discount_Item__c</fullName>
        <label>Discount Item</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plant_ID__c</fullName>
        <label>Plant ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductUrl__c</fullName>
        <label>ProductUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Header</label>
        <referenceTo>Quote_Header__c</referenceTo>
        <relationshipLabel>Quote Items</relationshipLabel>
        <relationshipName>Quote_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Item_Higher_Level__c</fullName>
        <label>Quote Item Higher Level</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Item_Number__c</fullName>
        <label>Quote Item Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Text__c</fullName>
        <label>Short Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Storage_Location__c</fullName>
        <label>Storage Location</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Rate__c</fullName>
        <label>Unit Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Quote Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>